[project]
name = "pybites-exercies"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.37",
    "textblob>=0.20.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
